# dxchallenge_planning_eval

./: .gitignore  README.md  evaluate.py  manual.txt  pyproject.toml
challenge_metrics/: __init__.py  aggregate.py  comfort.py  offroad_in_box.py  progress_ratio.py  savgol.py
submission_example/: actor.py
submission_expert/: actor.py
submission_vmax_sac/: actor.py  feature_extractor.py  network.py
