[project]
name = "V-Max"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda13]>=0.10.2",
    "tensorflow-cpu>=2.21.0",
    "waymo-waymax",
]

[tool.uv]
# Prevent installing the GPU/monolithic TensorFlow package pulled by waymo-waymax.
exclude-dependencies = ["tensorflow"]

[tool.uv.sources]
waymo-waymax = { git = "https://github.com/waymo-research/waymax.git", rev = "main" }

[tool.pyright]
venvPath = "."
venv = ".venv"
